tests/valid/61015_arithmetic/arithmetic.agu
-- Author: 61015, Filipe Lopes

let result : Int = (10 + 5) * 2 - 3;
print(result);
