tests/invalid-syntax/61015_missing_semicolon/missing_semicolon.agu
-- Author: 61015, Filipe Lopes

let a : Int = 10

print(a)
